# Django_React_Project

./: .gitignore  pyproject.toml
backend/: db.sqlite3  requirements.txt
backend/.choreo/: endpoints.yaml
backend/api/: urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/backend/: settings.py
frontend/: package-lock.json
frontend/public/: config.js
frontend/src/: App.jsx  api.js
frontend/src/components/: Form.jsx  Note.jsx  ProtectedRoute.jsx
frontend/src/pages/: Home.jsx
frontend/src/styles/: Form.css  Home.css
